# TerraSynth

./: .gitignore  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.codex/: codex-os.manifest.json  verify.commands
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
rust/: Cargo.toml  build.sh
rust/src/: chunk.rs  lib.rs
rust/src/biome/: classifier.rs  mod.rs  moisture.rs
rust/src/erosion/: hydraulic.rs  mod.rs
rust/src/noise/: layers.rs  mod.rs  ridged.rs  warped.rs
scripts/: clean-heavy.sh  clean-local.sh  dev-lean.sh
src/: main.ts  style.css
src/controls/: FlyControls.ts  KeyboardControls.ts
src/engine/: ChunkManager.ts  Fog.ts  Scene.ts  TerrainChunk.ts  Water.ts
src/generation/: BiomeColors.ts  ChunkWorkerBridge.test.ts  ChunkWorkerBridge.ts  WasmBridge.ts
src/types/: biome.ts  terrain.ts  wasm-pkg.d.ts
src/ui/: ExportPanel.ts  FPSCounter.ts  Minimap.ts  Panel.ts  PresetGallery.ts
src/utils/: debounce.ts  export.ts  hashState.ts  toast.ts
src/workers/: terrainWorker.ts
