[package]
name = "terra-wasm"
version = "0.1.0"
edition = "2021"
authors = ["TerraSynth"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
noise = "0.9"
thiserror = "2"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
